--- a/config/gardener/certmanager/issuer.yaml
+++ b/config/gardener/certmanager/issuer.yaml
@@ -1,8 +1,10 @@
-apiVersion: v1
-kind: ServiceAccount
+apiVersion: cert.gardener.cloud/v1alpha1
+kind: Issuer
 metadata:
   labels:
     app.kubernetes.io/name: registry-cache
     app.kubernetes.io/managed-by: kustomize
-  name: controller-manager
+  name: kyma
   namespace: system
+spec:
+  selfSigned: {}
