--- a/config/rbac/registrycacheconfig_viewer_role.yaml
+++ b/config/rbac/registrycacheconfig_viewer_role.yaml
@@ -1,4 +1,4 @@
-# This rule is not used by the project registry-cache-kubebuilder itself.
+# This rule is not used by the project registry-cache itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
 # Grants read-only access to core.kyma-project.io.kyma-project.io resources.
@@ -9,7 +9,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: registry-cache-kubebuilder
+    app.kubernetes.io/name: registry-cache
     app.kubernetes.io/managed-by: kustomize
   name: registrycacheconfig-viewer-role
 rules:
