--- a/config/webhook/kustomization.yaml
+++ b/config/webhook/kustomization.yaml
@@ -4,3 +4,13 @@ resources:
 
 configurations:
 - kustomizeconfig.yaml
+
+patches:
+  - patch: |-
+      - op: add
+        path: /webhooks/0/namespaceSelector
+        value:
+          matchLabels:
+            operator.kyma-project.io/managed-by: kyma
+    target:
+      kind: ValidatingWebhookConfiguration
