--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,7 +1,14 @@
-resources:
-- manager.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
+- newTag: local
 - name: controller
   newName: agalwas/registry-cache-test
+- name: controller-admission
+resources:
+- manager.yaml
+- priority_class.yaml
+
+
+patches:
+- path: priority_class_patch.yaml
