--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -3,7 +3,8 @@ kind: Kustomization
 images:
 - newTag: local
 - name: controller
-  newName: agalwas/registry-cache-test
+  newName: test
+  newTag: testtag
 - name: controller-admission
 resources:
 - manager.yaml
