Validations on edit working

--- a/config/samples/core.kyma-project.io_v1beta1_registrycacheconfig.yaml
+++ b/config/samples/core.kyma-project.io_v1beta1_registrycacheconfig.yaml
@@ -1,4 +1,4 @@
-apiVersion: core.kyma-project.io.kyma-project.io/v1beta1
+apiVersion: core.kyma-project.io/v1beta1
 kind: RegistryCacheConfig
 metadata:
   labels:
