--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 images:
 - newTag: local
 - name: controller
-  newName: test
-  newTag: testtag
+  newName: koala7659/registry-cache-test
+  newTag: test1
 - name: controller-admission
 resources:
 - manager.yaml
