--- a/config/samples/core.kyma-project.io_v1beta1_registrycache.yaml
+++ b/config/samples/core.kyma-project.io_v1beta1_registrycache.yaml
@@ -1,9 +1,9 @@
 apiVersion: core.kyma-project.io/v1beta1
-kind: RegistryCacheConfig
+kind: RegistryCache
 metadata:
   labels:
     app.kubernetes.io/name: registry-cache
     app.kubernetes.io/managed-by: kustomize
-  name: registrycacheconfig-sample
+  name: registrycache-sample
 spec:
   # TODO(user): Add fields here
