--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,24 @@ on:
       - '*'  # Trigger on tag pushes
 
 jobs:
+  setup:
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.tag.outputs.tag || '' }}
+      # set to {tag}-experimental if tag is set, otherwise set to empty string
+      tag-experimental: ${{ steps.tag.outputs.tag && format('{0}-experimental', steps.tag.outputs.tag) || '' }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+      - id: tag
+        if: github.event_name == 'push' && github.ref_type == 'tag'
+        run: echo "tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+
   generate-release:
     runs-on: ubuntu-latest
     permissions:
@@ -30,10 +48,27 @@ jobs:
             --config=./config/crd/crd-doc-config.yaml \
             --output-path=./config/crd/crd-docs.md
 
+      - name: Generate Release module artifacts for tag release
+        run: make install > registry-cache.yaml
+        env:
+          # Use current tag as version
+          IMG: ${{ needs.setup.outputs.tag }}
+
+      - name: Generate Release module artifacts for experimental tag release
+        run: make install > registry-cache-experimental.yaml
+        env:
+          IMG: ${{ needs.setup.outputs.tag-experimental }}
+
+
       - name: Create Release and Generate Notes
         uses: softprops/action-gh-release@v2
         with:
-          files: ./config/crd/crd-docs.md
+          files: | 
+            ./config/crd/crd-docs.md
+            ./registry-cache.yaml
+            ./registry-cache-experimental.yaml
+            ./config/samples/default-registry_cache_cr.yaml
+            
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
