--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,4 @@
 ## Append samples of your project ##
 resources:
-- core.kyma-project.io_v1beta1_registrycache.yaml
+- default_registry_cache_cr.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
