--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v6
         with:
-          go-version: '~1.25.0'
+          go-version-file: 'go.mod'
           cache: true
 
       - name: Run linter
